--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,15 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+  --font-text: 'Inter-Variable', sans-serif;
+  --font-main: 'PressStart2P', fantasy;
+  --text-font-size: 18px;
+  --text-font-height: 21px;
+  --text-font-color: #000;
+  --text-font-weight-normal: 400;
+  --text-font-weight-bold: 700;
+  --bg-header-color: #fff;
+  --bg-card-color: #fff;
+  --font-main-title:clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  --font-main-logo: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  --border-view: 2px solid #000;
+}
