--- a/styles/style.css
+++ b/styles/style.css
@@ -12,5 +12,72 @@
 
 .page {
   min-inline-size: 320px;
+  max-inline-size: 1440px;
   min-block-size: 100dvb;
 }
+
+
+/* Header */
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding: 128px 0;
+  max-width: 700px;
+  margin-block-end: 100px;
+  background-color: var(--bg-header-color);
+}
+
+.header__title {
+  font-family: var(--font-main);
+  font-size: var(--font-main-title);
+  text-transform: uppercase;
+}
+
+.header__logo {
+  font-family: var(--font-main);
+  font-size: var(--font-main-logo);
+  text-transform: uppercase;
+}
+
+
+/* Card */
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 700px;
+  width: 100%;
+  gap: 50px;
+}
+
+.card {
+  background-color: var(--bg-card-color);
+  border: var(--border-view);
+}
+
+.card__title {
+  padding: 4px 10px;
+  font-size: var(--text-font-size);
+  font-family: var(--font-text);
+  font-variation-settings: 'wght' var(--text-font-weight-bold);  
+}
+
+.card__image-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.card__image-decor {
+  position: absolute;
+  top: 28px;
+  right: 25px;
+  font-size: 14px;
+  font-family: var(--font-main);  
+  text-shadow: 0 0 1px #fff;
+  mix-blend-mode: hard-light;
+  opacity: 0.5;
+}
+  
