--- a/styles/style.css
+++ b/styles/style.css
@@ -11,11 +11,21 @@
 */
 
 .page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
   min-inline-size: 320px;
   max-inline-size: 1440px;
   min-block-size: 100dvb;
-}
-
+  font-variation-settings: 'wght' var(--text-font-weight-normal);
+  padding-block-start: 100px;
+  padding-block-end: 103px; 
+  background-image: var(--background-page);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+} 
 
 /* Header */
 .header {
@@ -26,24 +36,32 @@
   gap: 20px;
   padding: 128px 0;
   max-width: 700px;
+  width: 100%;
   margin-block-end: 100px;
+  border: var(--border-view);
   background-color: var(--bg-header-color);
 }
 
+@media (width <= 376px) {
+  .header {
+    padding: 120px 0; 
+  }
+}
+
 .header__title {
-  font-family: var(--font-main);
-  font-size: var(--font-main-title);
   text-transform: uppercase;
+  font-size: var(--font-main-title);
+  font-family: var(--font-main);
 }
 
 .header__logo {
+  text-transform: uppercase;
   font-family: var(--font-main);
   font-size: var(--font-main-logo);
-  text-transform: uppercase;
 }
 
 
-/* Card */
+/* Main */
 .main {
   display: flex;
   flex-direction: column;
@@ -51,6 +69,12 @@
   max-width: 700px;
   width: 100%;
   gap: 50px;
+}
+
+@media (width <= 375px) {
+  .main  {
+    gap: 55px;
+  }
 }
 
 .card {
@@ -61,8 +85,36 @@
 .card__title {
   padding: 4px 10px;
   font-size: var(--text-font-size);
-  font-family: var(--font-text);
+  font-family: var(--font-card-text);
   font-variation-settings: 'wght' var(--text-font-weight-bold);  
+}
+
+.card__content-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  padding: 25px;
+}
+
+@media (width <= 375px) {
+  .card__content-wrapper {
+    gap: 25px;
+    padding: 26px 25px 20px 25px;
+  }
+}
+
+.card__content {
+  display: flex;
+  flex-direction: column;
+  gap: 27px;
+}
+
+.card__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  object-position: center;
 }
 
 .card__image-wrapper {
@@ -80,4 +132,200 @@
   mix-blend-mode: hard-light;
   opacity: 0.5;
 }
-  
+
+@media (width <= 375px) {
+  .card__image-decor {
+    top: 25px;
+    right: 11px;
+  }
+}
+
+/* Делаем обводку лейблу */
+@supports (
+  (-webkit-text-stroke: 1px var(--bg-card-color)) or
+    (text-stroke: 1px var(--bg-card-color))
+) {
+  .card__image-decor {
+    text-shadow: none;
+    text-stroke: 1px var(--bg-card-color);
+    -webkit-text-stroke: 1px var(--bg-card-color);
+  }
+}
+
+.card__text {
+  font-family: var(--font-card-text);
+  line-height: var(--text-font-height);
+  font-size: var(--text-font-size);
+}
+
+.card__button-wrapper {
+  display: flex;
+  justify-content: end;
+  gap: 12px;
+}
+
+.button__icon {
+  background: transparent;
+  border: 0 solid transparent;
+  padding: 0;
+  cursor: pointer;
+  max-height: 40px;
+  transition: border-color 0.3s ease;
+  appearance: none;
+}
+
+.card__icon-button:focus-visible {
+  border-color: #000;
+}
+
+.button__icon:focus {
+  outline: none;
+}
+
+.button__icon:hover {
+  transform: scaleX(1);
+}
+
+.button {
+  background-color: var(--bg-card-color);
+  border: var(--border-view);
+  cursor: pointer;
+  position: relative;
+  transition: box-shadow 0.3s ease;
+}
+
+.button__save {
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  cursor: pointer;
+  padding: 15px 21px 15px 20px;
+  gap: 8px;
+}
+
+@media (width <= 375px) {
+  .button__save {
+    gap: 6px;
+    flex-direction: column;
+    padding: 15px 21px 11px 19px;
+  }
+}
+
+.button__save-icon {
+  position: relative;
+  color: var(--bg-card-color);
+  mix-blend-mode: difference;
+  inline-size: 21px;
+  block-size: 21px;
+}
+
+@media (width <= 375px) {
+  .button__save-icon {
+    flex-direction: column;
+    block-size: 28px;
+    inline-size: 28px;
+  }
+}
+
+.button__text {
+  font-family: var(--font-main);
+  font-size: var(--text-button-font-size);
+  color: var(--button-text-color);
+  mix-blend-mode: difference;
+  line-height: var(--text-font-height);
+}
+
+@media (width <= 375px) {
+  .modal {
+    max-width: 341px;
+  }
+}
+
+.card__like-button {
+  height: 39px;
+  max-width: 130px;
+  padding: 10px 20px;
+  width: 100%;
+}
+
+
+/* Pop-up */
+.modal {
+  padding: 30px;
+  max-width: 353px;
+  width: 100%;
+}
+
+.modal__content {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.modal__icon {
+  flex: 0 0 20%;
+  block-size: 39px;
+  inline-size: 39px;
+}
+
+dialog::backdrop {
+  background-color: rgb(0 0 0 / 0.75);
+}
+
+.modal__text {
+  flex: 1; 
+  font-family: var(--font-main);
+  font-size: var(--text-button-font-size);
+  line-height: var(--text-font-height);
+  text-transform: uppercase; 
+}
+
+.modal__button {
+  position: relative;
+  border: 2px solid #000;
+  cursor: pointer;
+  outline: none;
+  background-color: transparent;
+  padding: 8px 132px;
+  transition: box-shadow 0.3s ease;
+}
+
+@media (width <= 375px) {
+  .modal__button {
+    padding: 7px 123px;
+  }
+}
+
+.modal__button-text {
+  text-transform: uppercase;
+}
+
+.image__card--grayscale {
+  filter: grayscale(70%);
+}
+
+.image__card--saturate {
+  filter: saturate(280%);
+}
+
+.image__card--contrast-hue {
+  filter: contrast(100%) hue-rotate(30deg) saturate(100%);
+}
+
+.image__card--invert {
+  filter: invert(80%);
+}
+
+.image__card--sepia {
+  filter: sepia(90%);
+}
+
+.image__card--blur {
+  filter: blur(10px);
+}
+
+.image__card--hue-rotate-blur {
+  filter: hue-rotate(90deg) blur(1.5px) contrast(65%);
+}
