--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,6 +1,6 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
 :root {
-  --font-text: 'Inter-Variable', sans-serif;
+  --font-card-text: 'Inter-Variable', sans-serif;
   --font-main: 'PressStart2P', fantasy;
   --text-font-size: 18px;
   --text-font-height: 21px;
@@ -12,4 +12,9 @@
   --font-main-title:clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
   --font-main-logo: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
   --border-view: 2px solid #000;
+  --button-text-color: #fff;
+  --text-button-font-size: 14px;
+  --background-page:repeating-linear-gradient(to left,#d3d3d3 0 2px,#d3d3d300 2px 4px),
+  repeating-linear-gradient(to bottom,#d3d3d3 0 2px,#d3d3d300 2px 4px),
+  linear-gradient(to bottom,#e7e7e7 0.01%,#1a1a1a);
 }
