--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@
   min-block-size: 100dvb;
   font-variation-settings: 'wght' var(--text-font-weight-normal);
   padding-block-start: 100px;
-  padding-block-end: 103px; 
+  padding-block-end: 100px; 
   background-image: var(--background-page);
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -68,12 +68,12 @@
   align-items: center;
   max-width: 700px;
   width: 100%;
-  gap: 50px;
+  gap: 49px;
 }
 
 @media (width <= 375px) {
   .main  {
-    gap: 55px;
+    gap: 53px;
   }
 }
 
@@ -83,7 +83,7 @@
 }
 
 .card__title {
-  padding: 4px 10px;
+  padding: 6px 10px;
   font-size: var(--text-font-size);
   font-family: var(--font-card-text);
   font-variation-settings: 'wght' var(--text-font-weight-bold);  
@@ -92,7 +92,7 @@
 .card__content-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  gap: 22px;
   padding: 25px;
 }
 
@@ -110,7 +110,7 @@
 }
 
 .card__image {
-  width: 100%;
+  width: 101%;
   height: 100%;
   object-fit: cover;
   display: block;
@@ -131,6 +131,7 @@
   text-shadow: 0 0 1px #fff;
   mix-blend-mode: hard-light;
   opacity: 0.5;
+  /* z-index: 1; */
 }
 
 @media (width <= 375px) {
@@ -161,12 +162,12 @@
 .card__button-wrapper {
   display: flex;
   justify-content: end;
-  gap: 12px;
+  gap: 6px;
 }
 
 .button__icon {
   background: transparent;
-  border: 0 solid transparent;
+  border: 2px solid transparent;
   padding: 0;
   cursor: pointer;
   max-height: 40px;
@@ -194,13 +195,39 @@
   transition: box-shadow 0.3s ease;
 }
 
+.button::before {
+  position: absolute;
+  content: '';
+  transform-origin: left;
+  transform: scaleX(0);
+  transition: 0.5s ease-in-out;
+  inline-size: 100%;
+  block-size: 100%;
+  background-color: var(--button-animations-color);
+  inset: 0;
+  /* z-index: -1 */
+}
+
+.button:hover::before {
+  
+  transform: scaleX(1);
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  box-shadow: 2px 2px 0 0 var(--button-animations-color);
+}
+
 .button__save {
   position: relative;
   display: flex;
   justify-content: space-around;
   align-items: center;
   cursor: pointer;
-  padding: 15px 21px 15px 20px;
+  padding: 15px 21px 15px 19px;
   gap: 8px;
 }
 
@@ -243,7 +270,7 @@
 }
 
 .card__like-button {
-  height: 39px;
+  height: 40px;
   max-width: 130px;
   padding: 10px 20px;
   width: 100%;
@@ -302,30 +329,30 @@ dialog::backdrop {
   text-transform: uppercase;
 }
 
-.image__card--grayscale {
-  filter: grayscale(70%);
+.image__card-grayscale {
+  filter: grayscale(20%);
 }
 
-.image__card--saturate {
+.image__card-saturate {
   filter: saturate(280%);
 }
 
-.image__card--contrast-hue {
+.image__card-contrast-hue {
   filter: contrast(100%) hue-rotate(30deg) saturate(100%);
 }
 
-.image__card--invert {
+.image__card-invert {
   filter: invert(80%);
 }
 
-.image__card--sepia {
+.image__card-sepia {
   filter: sepia(90%);
 }
 
-.image__card--blur {
+.image__card-blur {
   filter: blur(10px);
 }
 
-.image__card--hue-rotate-blur {
+.image__card-hue-rotate-blur {
   filter: hue-rotate(90deg) blur(1.5px) contrast(65%);
 }
