--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -4,7 +4,7 @@
   font-weight: 400 785;
   font-display: swap;
   src: url(./Inter-Variable.woff2) format("woff2 supports variations"),
-  url(.Inter-Variable.woff2) format('woff2-variations');
+  url(./Inter-Variable.woff2) format('woff2-variations');
 }
 
 @font-face {
