--- a/styles/animations.css
+++ b/styles/animations.css
@@ -9,7 +9,7 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 */
-/* .sparks {
+.sparks {
   opacity: 0;
   transition: fill 0.3s linear;
 }
@@ -24,13 +24,13 @@
   transition: fill 0.3s linear;
 }
 
-.like-icon .core {
-  fill: var(--bg-color-heart-basic);
+.like-icon  {
+  fill: transparent;
   transition: fill 0.3s linear 0.3s;
 }
 
-.like-icon .main-body {
-  fill: var(--bg-color-heart-basic);
+.like-icon  {
+  fill: transparent;
   transition: fill 0.3s linear;
 }
 
@@ -117,126 +117,5 @@
   100% {
     opacity: 1;
   }
-} */
-
-.main-body {
-  fill: transparent;
-  transition: fill 0.3s linear;
 }
 
-.core {
-  fill: transparent;
-  transition: fill 0.3s linear 0.03s;
-}
-
-.sparks {
-  opacity: 0;
-  transition: fill 0.3s linear;
-}
-
-.like-icon .core {
-  fill: #fff;
-  transition: fill 0.3s linear 0.03s;
-}
-
-.like-icon .main-body {
-  fill: #fff;
-  transition: fill 0.3s linear;
-}
-
-.like-icon .contour {
-  fill: #000;
-  transition: fill 0.1s linear;
-}
-
-.like-icon .heart {
-  transform-origin: center;
-}
-
-.like-icon .sparks {
-  opacity: 0;
-}
-
-.like-icon:hover .main-body {
-  fill: #000;
-  transition: 0.3s 0.05s linear;
-}
-
-.like-icon:hover .core {
-  fill: #000;
-  transition: 0.3s linear;
-}
-
-.like-icon:active .main-body {
-  fill: #ff0000;
-  transition: 0.3s 0.05s linear;
-}
-
-.like-icon:active .core {
-  fill: #ff0000;
-  transition: 0.3s linear;
-}
-
-.like-icon.is-liked .main-body {
-  fill: #ff0000;
-  transition: 0.3s 0.05s linear;
-}
-
-.like-icon.is-liked .core {
-  fill: #ff0000;
-  transition: 0.3s linear;
-}
-
-/* Вроде же верно, задерка 0.06 длительность 0.3 */
-.like-icon.is-liked .contour {
-  fill: #ff0000;
-  transition: fill 0.3s linear 0.06s;
-}
-
-.is-liked .heart {
-  animation-name: heart-scale;
-  animation-delay: 0.1s;
-  animation-duration: 0.3s;
-  animation-direction: normal;
-  transform-origin: center;
-  animation-timing-function: ease-in;
-  animation-iteration-count: 1;
-}
-
-.is-liked .sparks {
-  animation-name: sparks-opacity;
-  animation-delay: 0.3s;
-  animation-duration: 0.3s;
-  animation-direction: normal;
-  transform-origin: center;
-  animation-timing-function: ease-in;
-  animation-iteration-count: 1;
-}
-
-@keyframes heart-scale {
-  0% {
-    transform: scale(1);
-  }
-
-  50% {
-    transform: scale(1.25);
-  }
-
-  100% {
-    transform: scale(1);
-  }
-}
-
-@keyframes sparks-opacity {
-  0% {
-    opacity: 0;
-  }
-
-  50% {
-    opacity: 1;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
