--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,7 @@
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: #d3d3d3;
 } 
 
 /* Header */
@@ -131,7 +132,7 @@
   text-shadow: 0 0 1px #fff;
   mix-blend-mode: hard-light;
   opacity: 0.5;
-  /* z-index: 1; */
+  z-index: 1; 
 }
 
 @media (width <= 375px) {
