--- a/styles/animations.css
+++ b/styles/animations.css
@@ -23,30 +23,33 @@
   fill: transparent;
   transition: fill 0.3s linear;
 }
-
-.like-icon  {
+ 
+ .like-icon  {
   fill: transparent;
   transition: fill 0.3s linear 0.3s;
-}
-
-.like-icon  {
-  fill: transparent;
-  transition: fill 0.3s linear;
-}
+} 
 
 .like-icon .contour {
   fill: var(--color-heart-contour);
-  transition: fill 0.3s linear 0.06s;
+  transition: fill 0.1s linear;
+}
+
+.like-icon .heart {
+  transform-origin: center;
+}
+
+.like-icon .sparks {
+  opacity: 0;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--color-heart-contour);
+  transition: 0.3s 0.05s linear;
 }
 
 .like-icon:hover .core {
   fill: var(--color-heart-contour);
   transition: 0.3s linear;
-}
-
-.like-icon:hover .main-body {
-  fill: var( --color-heart-contour);
-  transition: 0.3s 0.05s linear;
 }
 
 .like-icon:active .main-body {
@@ -59,49 +62,50 @@
   transition: 0.3s linear;
 }
 
-.like-icon.is-liked .core {
-  fill: var(--bg-color-heart-active);
-  transition: 0.3s linear ;
-}
-
 .like-icon.is-liked .main-body {
   fill: var(--bg-color-heart-active);
   transition: 0.3s 0.05s linear;
 }
 
+.like-icon.is-liked .core {
+  fill: var(--bg-color-heart-active);
+  transition: 0.3s linear;
+}
+
 .like-icon.is-liked .contour {
   fill: var(--bg-color-heart-active);
   transition: fill 0.3s linear 0.06s;
-
-}
-
-.is-liked .sparks {
-  animation-name: sparks-opacity;
-  animation-duration: 0.3s;
-  animation-timing-function: ease-in;
-  animation-direction: normal;
-  transform-origin: center;
-  animation-iteration-count: 1;
-  animation-delay: 0.3s;
 }
 
 .is-liked .heart {
   animation-name: heart-scale;
+  animation-delay: 0.1s;
   animation-duration: 0.3s;
-  animation-timing-function: ease-in;
   animation-direction: normal;
   transform-origin: center;
+  animation-timing-function: ease-in;
   animation-iteration-count: 1;
+}
+
+.is-liked .sparks {
+  animation-name: sparks-opacity;
   animation-delay: 0.3s;
+  animation-duration: 0.3s;
+  animation-direction: normal;
+  transform-origin: center;
+  animation-timing-function: ease-in;
+  animation-iteration-count: 1;
 }
 
 @keyframes heart-scale {
   0% {
     transform: scale(1);
   }
+
   50% {
     transform: scale(1.25);
   }
+
   100% {
     transform: scale(1);
   }
@@ -111,11 +115,14 @@
   0% {
     opacity: 0;
   }
+
   50% {
     opacity: 1;
   }
+
   100% {
     opacity: 1;
   }
 }
+
 
